# trivia-game

./: Cargo.toml  README.md
assets/data/: questions.json
src/: app.rs  components.rs  main.rs
