[package]
name = "calabozos_y_preguntones"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
rand = "0.8.5"

egui = "0.29.1"
eframe = "0.29.1"

# For image support:
egui_extras = { version = "0.29.1", features = ["default", "image"] }